--- a/_sources/ch03/note02A.ipynb
+++ b/_sources/ch03/note02A.ipynb
@@ -120,19 +120,17 @@
     "-\\frac{\\hbar^2}{2m} \\frac{d^2}{dx^2} \\psi(x) = E \\psi(x)\n",
     "$$\n",
     "\n",
-    "or equivalently:\n",
-    "\n",
     "$$\n",
     "\\psi''(x) = -k^2 \\psi(x)\n",
     "$$\n",
     "\n",
-    "where:\n",
+    "- where the $k^2$ is a positive real number that relates the particle's energy $E$ to its wavefunction.\n",
     "\n",
     "$$\n",
     "k^2 = \\frac{2mE}{\\hbar^2}\n",
     "$$\n",
     "\n",
-    "is a positive real number that relates the particle's energy \\(E\\) to its wavefunction.\n"
+    "\n"
    ]
   },
   {
@@ -153,13 +151,13 @@
     "\\psi(x) = c_1 e^{ikx} + c_2 e^{-ikx} = A \\cos(kx) + B \\sin(kx)\n",
     "$$\n",
     "\n",
-    "- Applying the boundary condition \\(\\psi(0) = 0\\), we find that \\(A = 0\\), leaving us with:\n",
+    "- Applying the boundary condition $\\psi(0) = 0$, we find that $A = 0$, leaving us with:\n",
     "\n",
     "$$\n",
     "\\psi(x) = B \\sin(kx)\n",
     "$$\n",
     "\n",
-    "- Applying the boundary condition \\(\\psi(L) = 0\\), we get:\n",
+    "- Applying the boundary condition $\\psi(L) = 0$, we get:\n",
     "\n",
     "$$\n",
     "B \\sin(kL) = 0\n",
@@ -177,7 +175,7 @@
     "\\psi(x) = B \\sin\\left(\\frac{n\\pi}{L}x\\right)\n",
     "$$\n",
     "\n",
-    "- Using the relationship \\(k^2 = \\frac{n^2\\pi^2}{L^2} = \\frac{2mE}{\\hbar^2}\\), we can express the energy levels as:\n",
+    "- Using the relationship $k^2 = \\frac{n^2\\pi^2}{L^2} = \\frac{2mE}{\\hbar^2}$, we can express the energy levels as:\n",
     "\n",
     "$$\n",
     "E_n = \\frac{n^2 h^2}{8mL^2}\n",
@@ -192,37 +190,26 @@
    "source": [
     "### Wavefunctions Must Be Normalized\n",
     "\n",
-    "- Next, we determine the constant coefficient \\( B_n \\) by enforcing the normalization condition:\n",
+    "- Next, we determine the constant coefficient $B_n$ by enforcing the normalization condition:\n",
     "\n",
     "$$\n",
-    "\\int_0^L \\psi_n(x)^2 \\, dx = 1\n",
-    "$$\n",
-    "\n",
-    "Substituting the expression for the wavefunction:\n",
+    "\\int_0^L \\psi_n(x)^2 \\, dx  = 1\n",
     "\n",
     "$$\n",
-    "\\psi_n^*(x) \\psi_n(x) = B_n^2 \\sin^2 \\left(\\frac{n\\pi x}{L}\\right)\n",
-    "$$\n",
     "\n",
-    "- To evaluate the integral, we use the trigonometric identity:\n",
+    "- To evaluate the integral, we use the trigonometric identity $\\sin^2(x) = \\frac{1}{2}(1 - \\cos(2x))=1$\n",
     "\n",
     "$$\n",
-    "\\sin^2(x) = \\frac{1}{2}(1 - \\cos(2x))\n",
+    "B_n^2 \\int_0^L \\sin^2\\left(\\frac{n\\pi x}{L}\\right) dx = \\frac{B_n^2}{2} \\int_0^L \\left[ 1 - \\cos\\left(\\frac{2n\\pi x}{L}\\right) \\right] dx =1\n",
     "$$\n",
     "\n",
-    "Applying this identity, we can rewrite the integral as:\n",
-    "\n",
-    "$$\n",
-    "B_n^2 \\int_0^L \\sin^2\\left(\\frac{n\\pi x}{L}\\right) dx = \\frac{B_n^2}{2} \\int_0^L \\left[ 1 - \\cos\\left(\\frac{2n\\pi x}{L}\\right) \\right] dx\n",
-    "$$\n",
-    "\n",
-    "Since the integral of \\(\\cos\\left(\\frac{2n\\pi x}{L}\\right)\\) over a full period from \\(0\\) to \\(L\\) is zero, we are left with:\n",
+    "- Since the integral of $\\cos\\left(\\frac{2n\\pi x}{L}\\right)$ over a full period from $0$ to $L$ is zero, we are left with:\n",
     "\n",
     "$$\n",
     "\\frac{B_n^2}{2} \\cdot L = 1\n",
     "$$\n",
     "\n",
-    "Solving for \\(B_n\\):\n",
+    "- Solving for $B_n$ we determine **normalization constant** which ensures that square of wavefunction integrates to 1. \n",
     "\n",
     "$$\n",
     "B_n = \\sqrt{\\frac{2}{L}}\n",
@@ -262,6 +249,15 @@
    "metadata": {},
    "source": [
     "### Visualize PIB solutions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pure states\n",
+    "\n",
+    "- Below we visualize a few of the eigenfunctions $n=1,2,3$ and its squares."
    ]
   },
   {
@@ -316,6 +312,22 @@
     "# Show the plots\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mixed states\n",
+    "\n",
+    "- Below we visualize lienar combination of the first three eigenfunctions\n",
+    "\n",
+    "$$\n",
+    "\\psi(x,t) = c_1 \\psi_1+c_3 \\psi_3+c_3 \\psi_3\n",
+    "$$\n",
+    "\n",
+    "- We will pick $c_1=c_2=c_3=1$ for simplicity. Will see that these coefficients determine contributions of each eigenfunction. \n",
+    "- Notice that $\\psi^2$ can become time dependent if it contains mixtures of states but is time indepedent when it is in pure state becasue complex exponents cancel each other off: $\\psi_n(x)e^{-iEt/\\hbar}\\cdot \\psi^{*}_n(x)e^{+iEt/\\hbar}=|\\psi_n(x)|^2$"
    ]
   },
   {
