--- a/ch03/note02A.ipynb
+++ b/ch03/note02A.ipynb
@@ -60,21 +60,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What are some new ideas that we learn from PIB\n",
-    "\n",
-    "1. In classical systems  a particle trapped inside a large box can move at any speed within the box and it is no more likely to be found at one position than another. However, when the well becomes very narrow (on the scale of a few nanometers), quantum effects become important. The particle may only occupy certain positive **energy levels**.\n",
-    "\n",
-    "2. \"Particle\"  can never have **zero energy**, meaning that the particle can never \"sit still\". \n",
-    "\n",
-    "3. \"Particle\" is more likely to be found at certain positions than at others, depending on its energy level. The particle may never be detected at certain positions, known as **spatial nodes.**\n",
-    "\n",
-    "   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Solving the Schrödinger Equation for the Particle in a Box (PIB)\n",
     "\n",
     "\n",
@@ -242,6 +227,19 @@
     "- Where the coefficients $c_n$ depend on initial condition, e.g could be all zero except one (pure state) or a few of them non-zero (mixed state)\n",
     "\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What are some new ideas that we learn from PIB\n",
+    "\n",
+    "1. In classical systems  a particle trapped inside a large box can move at any speed within the box and it is no more likely to be found at one position than another. However, when the well becomes very narrow (on the scale of a few nanometers), quantum effects become important. The particle may only occupy certain positive **energy levels**.\n",
+    "\n",
+    "2. \"Particle\"  can never have **zero energy**, meaning that the particle can never \"sit still\". \n",
+    "\n",
+    "3. \"Particle\" is more likely to be found at certain positions than at others, depending on its energy level. The particle may never be detected at certain positions, known as **spatial nodes.**"
    ]
   },
   {
