--- a/_sources/ch03/note02A.ipynb
+++ b/_sources/ch03/note02A.ipynb
@@ -34,18 +34,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Particle in a Box (PIB):\n",
-    "\n",
-    "- Particle in a box is a toy model of electron/atom/molecule trapped in some region of space $[0,L]$. The positional information of a quantum \"particle\" is described by a quantum wave function $\\psi(x)$ which is obtained by solving Schrödinger equation a simple PDE/ODE or an eigenfunction-eigenvalue problem. \n",
-    "- Wave functions are standing waves just like in a guitar on a string problem. With one major difference! Quantum-wave function has a probabilistic meaning and hence has a completely different meaning from a classical notion of a \"wave\"."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Classical vs Quantum particle in a box\n",
+    "\n",
+    "- Particle in a box is a toy model of electron (or atom, molecule, small quantum object) trapped in some region of space $[0,L]$. \n",
+    "- The positional information of a quantum \"particle\" is described by a quantum wave function $\\psi(x)$ which is obtained by solving Schrödinger equation with boundary conditions\n",
+    "- Wave functions are standing waves just like in a guitar on a string problem. With one major difference! Quantum-wave function has a probabilistic meaning and hence has a completely different meaning from a classical notion of a \"wave\".\n",
+    "- **According to classical mechanis** in the absence of any attractive interactions particle will be boundicng back and forth between walls with constant speed. Hence and we expect to find particle with equal probability at all locations $x$. \n",
+    "- **According to quantum mechancis** Quantum particle in the box is going to be found in some regions with high probability in others with little or zero! \n",
     "\n",
     ":::{figure-md} markdown-fig\n",
     "\n",
