--- a/ch03/demo_PIB.ipynb
+++ b/ch03/demo_PIB.ipynb
@@ -220,7 +220,7 @@
     "        ax.text(1.6, En, f\"n={n}, E={En:.2f}\", verticalalignment='center')\n",
     "        \n",
     "    ax.set_xlim(0, 3)\n",
-    "    ax.set_ylim(0, energy(max_n+1))\n",
+    "    ax.set_ylim(0, Epib1d(n=max_n+1, L=L ))\n",
     "    ax.set_xlabel(\"Particle in a Box\")\n",
     "    ax.set_ylabel(\"Energy\")\n",
     "    ax.set_title(\"Energy Levels of a 1D Quantum Particle in a Box\")\n",
