--- a/_sources/ch03/demo_PIB.ipynb
+++ b/_sources/ch03/demo_PIB.ipynb
@@ -413,6 +413,151 @@
    "source": [
     "interact(plot_energy_levels, nx=(1,10), ny=(1,10), nz=(1,10), lx=(1,10), ly=(1,10), lz=(1,10))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Symbolic evaluations of Paritcle in a box integrals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sympy import symbols, sqrt, sin, pi, diff, integrate, simplify, pprint, init_printing\n",
+    "\n",
+    "# Initialize pretty printing\n",
+    "init_printing()\n",
+    "\n",
+    "# Define symbols\n",
+    "x, L, n, hbar = symbols('x L n hbar', real=True, positive=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 1: Define the wavefunction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "psi_n = sqrt(2/L) * sin(n * pi * x / L)\n",
+    "\n",
+    "print(\"Wavefunction ψ_n(x):\")\n",
+    "\n",
+    "pprint(psi_n)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 2: Compute the second derivative of ψ_n(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d2psi_dx2 = diff(psi_n, x, x)\n",
+    "\n",
+    "print(\"Second derivative d²ψ_n/dx²:\")\n",
+    "\n",
+    "pprint(d2psi_dx2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 3: Apply the momentum squared operator: -ħ² d²ψ_n/dx²"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "op_psi = -hbar**2 * d2psi_dx2\n",
+    "\n",
+    "print(\"Momentum operator applied to ψ_n(x): -ħ² d²ψ_n/dx²:\")\n",
+    "\n",
+    "pprint(op_psi)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 4: Compute the integrand ψ_n(x) * op_ψ_n(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "integrand = psi_n * op_psi\n",
+    "\n",
+    "print(\"Integrand ψ_n(x) * (-ħ² d²ψ_n/dx²):\")\n",
+    "\n",
+    "pprint(integrand)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 5: Compute the expectation value ⟨p²⟩"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expectation = integrate(integrand, (x, 0, L))\n",
+    "\n",
+    "print(\"Expectation value ⟨p²⟩ before simplification:\")\n",
+    "\n",
+    "pprint(expectation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 6: Simplify the result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expectation_simplified = simplify(expectation)\n",
+    "\n",
+    "print(\"Simplified expectation value ⟨p²⟩:\")\n",
+    "\n",
+    "pprint(expectation_simplified)"
+   ]
   }
  ],
  "metadata": {
