--- a/ch03/note03A.ipynb
+++ b/ch03/note03A.ipynb
@@ -6,7 +6,7 @@
     "id": "gXn_YKAelSYF"
    },
    "source": [
-    "# Characteristics of Quantum Wavefunctions"
+    "# P1 Characteristics of Quantum Wavefunctions"
    ]
   },
   {
