--- a/math/note04.ipynb
+++ b/math/note04.ipynb
@@ -89,10 +89,15 @@
     "Depending on the context, we may emphasize the basis or omit it when the basis is implied:\n",
     "\n",
     "  - In terms of a coordinate basis:  \n",
+    "\n",
     "    $$\\vec{a} = 2\\vec{e_i} + 3\\vec{e_j}$$\n",
+    "\n",
     "  - As an ordered tuple of components:  \n",
+    "\n",
     "    $$a = (2, 3)$$\n",
+    "\n",
     "  - Using Dirac notation (common in quantum mechanics):  \n",
+    "  \n",
     "    $$\\mid a \\rangle = 2 \\mid e_i \\rangle + 3 \\mid e_j \\rangle$$\n",
     "\n",
     "Vectors can represent a wide range of phenomena, such as the position of a particle in space, the population of countries, or temperature variations in different regions of a forest."
@@ -114,6 +119,7 @@
     "#### 1. Addition or Subtraction\n",
     "\n",
     "- **Component-wise addition**:\n",
+    "\n",
     "  $$a + b = \\begin{pmatrix}\n",
     "    2\\\\\n",
     "    3\n",
@@ -126,6 +132,7 @@
     "  \\end{pmatrix}$$\n",
     "\n",
     "- **In Dirac notation**:\n",
+    "\n",
     "  $$\\mid a \\rangle \\pm \\mid b \\rangle = (a_1 \\pm b_1)\\mid e_1 \\rangle + (a_2 \\pm b_2)\\mid e_2 \\rangle$$\n",
     "\n",
     "#### 2. Multiplication by a Scalar\n",
@@ -133,6 +140,7 @@
     "Multiplying a vector by a scalar $\\alpha$ scales the vector's magnitude without changing its direction. For example, with $\\alpha = 10$:\n",
     "\n",
     "- **Component-wise scalar multiplication**:\n",
+    "\n",
     "  $$\\alpha \\cdot a = 10 \\begin{pmatrix}\n",
     "    2\\\\\n",
     "    3\n",
@@ -142,7 +150,8 @@
     "  \\end{pmatrix}$$\n",
     "\n",
     "- **In Dirac notation**:\n",
-    "  $$\\alpha \\mid a \\rangle = \\alpha a_1 \\mid e_1 \\rangle + \\alpha a_2 \\mid e_2 \\rangle$$"
+    "\n",
+    "  $$\\beta \\mid a \\rangle = \\beta a_1 \\mid e_1 \\rangle + \\beta a_2 \\mid e_2 \\rangle$$"
    ]
   },
   {
@@ -219,13 +228,121 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "### Visualizing action of matrix on a vector\n",
+    "\n",
+    "These transformations illustrate different ways of modifying vectors and geometric shapes through scaling, shearing, and identity operations. We use 2D vector and matrices as an example \n",
+    "\n",
+    "1. **Shearing and Scaling**.$\\begin{bmatrix} 2 & 1 \\\\ 0 & 0.5 \\end{bmatrix}$ \n",
+    " \n",
+    "   - This matrix scales the $x$-direction by 2 and the $y$-direction by 0.5. Additionally, it applies a horizontal shear (displacement) along the $x$-axis by an amount proportional to the $y$-coordinate. This results in a combination of scaling and shearing, altering both the size and shape of objects.\n",
+    "\n",
+    "2. **Scaling**. $\\begin{bmatrix} 2 & 0 \\\\ 0 & 0.5 \\end{bmatrix}$ \n",
+    "\n",
+    "   - This matrix scales the $x$-direction by 2 and the $y$-direction by 0.5. It changes the size of the object, expanding it in the $x$-direction and compressing it in the $y$-direction, while keeping its shape intact that is without any angular distortion.\n",
+    "\n",
+    "3. **Stretching** $\\begin{bmatrix} 3 & 0 \\\\ 0 & 0.75 \\end{bmatrix}$ \n",
+    "   - This matrix stretches the object by a factor of 3 along the $x$-axis and compresses it by a factor of 0.75 along the $y$-axis. This operation changes the proportions of the object without distorting angles, stretching it non-uniformly.\n",
+    "\n",
+    "4. **Identity (No Change)**. $\\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$ \n",
+    "   - The identity matrix leaves the object unchanged. Applying this transformation results in the same object without any alteration to its size, shape, or orientation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Define the original vector\n",
+    "vector = np.array([2, 3])\n",
+    "\n",
+    "# Define the transformation matrices\n",
+    "shear_scale_matrix = np.array([[2, 1], [0, 0.5]])\n",
+    "scaling_matrix = np.array([[2, 0], [0, 0.5]])\n",
+    "stretching_matrix = np.array([[3, 0], [0, 0.75]])\n",
+    "identity_matrix = np.eye(2)\n",
+    "\n",
+    "# Apply the transformations\n",
+    "transformed_vector = shear_scale_matrix @ vector\n",
+    "scaled_vector = scaling_matrix @ vector\n",
+    "stretched_vector = stretching_matrix @ vector\n",
+    "identity_vector = identity_matrix @ vector\n",
+    "\n",
+    "# Create subplots for the four transformations\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(12, 12))\n",
+    "\n",
+    "# Plot 1: Shearing and Scaling Transformation\n",
+    "axs[0, 0].axhline(0, color='black', linewidth=0.5)\n",
+    "axs[0, 0].axvline(0, color='black', linewidth=0.5)\n",
+    "axs[0, 0].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
+    "axs[0, 0].quiver(0, 0, transformed_vector[0], transformed_vector[1], angles='xy', scale_units='xy', scale=1, color='red', label='Sheared & Scaled Vector')\n",
+    "axs[0, 0].set_xlim(-6, 6)\n",
+    "axs[0, 0].set_ylim(-6, 6)\n",
+    "axs[0, 0].set_title('Shearing and Scaling Transformation')\n",
+    "axs[0, 0].legend()\n",
+    "axs[0, 0].grid(True)\n",
+    "axs[0, 0].set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "# Plot 2: Scaling Transformation\n",
+    "axs[0, 1].axhline(0, color='black', linewidth=0.5)\n",
+    "axs[0, 1].axvline(0, color='black', linewidth=0.5)\n",
+    "axs[0, 1].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
+    "axs[0, 1].quiver(0, 0, scaled_vector[0], scaled_vector[1], angles='xy', scale_units='xy', scale=1, color='green', label='Scaled Vector')\n",
+    "axs[0, 1].set_xlim(-6, 6)\n",
+    "axs[0, 1].set_ylim(-6, 6)\n",
+    "axs[0, 1].set_title('Scaling Transformation')\n",
+    "axs[0, 1].legend()\n",
+    "axs[0, 1].grid(True)\n",
+    "axs[0, 1].set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "# Plot 3: Stretching Transformation\n",
+    "axs[1, 0].axhline(0, color='black', linewidth=0.5)\n",
+    "axs[1, 0].axvline(0, color='black', linewidth=0.5)\n",
+    "axs[1, 0].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
+    "axs[1, 0].quiver(0, 0, stretched_vector[0], stretched_vector[1], angles='xy', scale_units='xy', scale=1, color='purple', label='Stretched Vector')\n",
+    "axs[1, 0].set_xlim(-6, 6)\n",
+    "axs[1, 0].set_ylim(-6, 6)\n",
+    "axs[1, 0].set_title('Stretching Transformation')\n",
+    "axs[1, 0].legend()\n",
+    "axs[1, 0].grid(True)\n",
+    "axs[1, 0].set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "# Plot 4: Identity Transformation\n",
+    "axs[1, 1].axhline(0, color='black', linewidth=0.5)\n",
+    "axs[1, 1].axvline(0, color='black', linewidth=0.5)\n",
+    "axs[1, 1].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
+    "axs[1, 1].quiver(0, 0, identity_vector[0], identity_vector[1], angles='xy', scale_units='xy', scale=1, color='orange', label='Identity Vector (No Change)')\n",
+    "axs[1, 1].set_xlim(-6, 6)\n",
+    "axs[1, 1].set_ylim(-6, 6)\n",
+    "axs[1, 1].set_title('Identity Transformation (No Change)')\n",
+    "axs[1, 1].legend()\n",
+    "axs[1, 1].grid(True)\n",
+    "axs[1, 1].set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "# Display the plots\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Application: Hopfield Neural Networks \n",
+    "# Application: Hopfield Neural Networks \n",
     "\n",
     "A **Hopfield network** is a type of recurrent neural network where all neurons are connected to each other. It is commonly used for **associative memory**—storing and recalling patterns. The network evolves to a stable state, recalling a stored pattern when given noisy or incomplete input. We can understand its behavior using matrix and vector operations.\n",
-    "\n",
-    "---\n",
     "\n",
     "### Components of a Hopfield Network\n",
     "\n",
@@ -342,6 +459,11 @@
     "\n",
     "This is a basic introduction to the Hopfield network using matrix and vector operations. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
