--- a/math/note04.ipynb
+++ b/math/note04.ipynb
@@ -230,6 +230,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Define the coefficients matrix A and the right-hand side vector b\n",
+    "print('Solving Ax=b via matrix inversion')\n",
+    "\n",
+    "A = np.array([[2, 3],\n",
+    "              [1, -2]])\n",
+    "\n",
+    "b = np.array([7, 1])\n",
+    "\n",
+    "print('A', A)\n",
+    "print('b', b)\n",
+    "\n",
+    "# Calculate the inverse of matrix A\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "\n",
+    "# Solve for the unknown vector x using matrix inversion: x = A_inv * b\n",
+    "x = np.dot(A_inv, b)\n",
+    "\n",
+    "print(\"Solution using matrix inversion:\")\n",
+    "print(\"x =\", x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "vscode": {
