--- a/_sources/math/note04.ipynb
+++ b/_sources/math/note04.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Algebra 1: basics"
+    "# Linear Algebra 1: Basics "
    ]
   },
   {
@@ -127,21 +127,24 @@
     "    1\\\\\n",
     "    1\n",
     "  \\end{pmatrix} = \\begin{pmatrix}\n",
+    "    2+1\\\\\n",
+    "    3+1\n",
+    "  \\end{pmatrix} = \\begin{pmatrix}\n",
     "    3\\\\\n",
     "    4\n",
     "  \\end{pmatrix}$$\n",
     "\n",
     "- **In Dirac notation**:\n",
     "\n",
-    "  $$\\mid a \\rangle \\pm \\mid b \\rangle = (a_1 \\pm b_1)\\mid e_1 \\rangle + (a_2 \\pm b_2)\\mid e_2 \\rangle$$\n",
+    "  $$|a \\rangle + |b \\rangle = (2 + 1)\\mid e_1 \\rangle + (3 + 1)\\mid e_2 \\rangle$$\n",
     "\n",
     "#### 2. Multiplication by a Scalar\n",
     "\n",
-    "Multiplying a vector by a scalar $\\alpha$ scales the vector's magnitude without changing its direction. For example, with $\\alpha = 10$:\n",
+    "Multiplying a vector by a scalar $\\beta=10$ scales the vector's magnitude without changing its direction. \n",
     "\n",
     "- **Component-wise scalar multiplication**:\n",
     "\n",
-    "  $$\\alpha \\cdot a = 10 \\begin{pmatrix}\n",
+    "  $$10\\cdot a = 10 \\begin{pmatrix}\n",
     "    2\\\\\n",
     "    3\n",
     "  \\end{pmatrix} = \\begin{pmatrix}\n",
@@ -151,7 +154,7 @@
     "\n",
     "- **In Dirac notation**:\n",
     "\n",
-    "  $$\\beta \\mid a \\rangle = \\beta a_1 \\mid e_1 \\rangle + \\beta a_2 \\mid e_2 \\rangle$$"
+    "  $$10\\mid a \\rangle = 20 \\mid e_1 \\rangle + 30 \\mid e_2 \\rangle$$"
    ]
   },
   {
@@ -234,23 +237,21 @@
     }
    },
    "source": [
-    "### Visualizing action of matrix on a vector\n",
+    "### Visualizing Action of a Matrix on a Vector\n",
     "\n",
-    "These transformations illustrate different ways of modifying vectors and geometric shapes through scaling, shearing, and identity operations. We use 2D vector and matrices as an example \n",
+    "These transformations illustrate different ways of modifying vectors and geometric shapes through scaling, shearing, and identity operations. We use a 2D vector and matrices as an example.\n",
     "\n",
-    "1. **Shearing and Scaling**.$\\begin{bmatrix} 2 & 1 \\\\ 0 & 0.5 \\end{bmatrix}$ \n",
-    " \n",
-    "   - This matrix scales the $x$-direction by 2 and the $y$-direction by 0.5. Additionally, it applies a horizontal shear (displacement) along the $x$-axis by an amount proportional to the $y$-coordinate. This results in a combination of scaling and shearing, altering both the size and shape of objects.\n",
+    "1. **Shearing and Scaling**. $\\begin{bmatrix} 2 & 1.5 \\\\ 0.5 & 0.75 \\end{bmatrix}$\n",
+    "   - This matrix scales the $x$-direction by 2 and the $y$-direction by 0.75. Additionally, it applies both horizontal and vertical shear, distorting the object by shifting the $x$-coordinate in proportion to the $y$-coordinate and the $y$-coordinate in proportion to the $x$-coordinate. This results in a combination of scaling and shearing, altering both the size and shape of objects.\n",
     "\n",
-    "2. **Scaling**. $\\begin{bmatrix} 2 & 0 \\\\ 0 & 0.5 \\end{bmatrix}$ \n",
+    "2. **Scaling**. $\\begin{bmatrix} 2 & 0 \\\\ 0 & 0.5 \\end{bmatrix}$\n",
+    "   - This matrix scales the $x$-direction by 2 and the $y$-direction by 0.5. It changes the size of the object, expanding it in the $x$-direction and compressing it in the $y$-direction, while keeping its shape intact without any angular distortion.\n",
     "\n",
-    "   - This matrix scales the $x$-direction by 2 and the $y$-direction by 0.5. It changes the size of the object, expanding it in the $x$-direction and compressing it in the $y$-direction, while keeping its shape intact that is without any angular distortion.\n",
-    "\n",
-    "3. **Stretching** $\\begin{bmatrix} 3 & 0 \\\\ 0 & 0.75 \\end{bmatrix}$ \n",
+    "3. **Stretching**. $\\begin{bmatrix} 3 & 0 \\\\ 0 & 0.75 \\end{bmatrix}$\n",
     "   - This matrix stretches the object by a factor of 3 along the $x$-axis and compresses it by a factor of 0.75 along the $y$-axis. This operation changes the proportions of the object without distorting angles, stretching it non-uniformly.\n",
     "\n",
-    "4. **Identity (No Change)**. $\\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$ \n",
-    "   - The identity matrix leaves the object unchanged. Applying this transformation results in the same object without any alteration to its size, shape, or orientation."
+    "4. **Identity (No Change)**. $\\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$\n",
+    "   - The identity matrix leaves the object unchanged. Applying this transformation results in the same object without any alteration to its size, shape, or orientation.\n"
    ]
   },
   {
@@ -334,6 +335,134 @@
     "\n",
     "# Display the plots\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from ipywidgets import widgets\n",
+    "from ipywidgets.widgets import interact, interactive\n",
+    "\n",
+    "def matrix_transform(a=1, b=0, c=0, d=1):\n",
+    "    matrix = np.array([[a, b], [c, d]])\n",
+    "    vector = np.array([[5], [5]])\n",
+    "    transformed_vector = np.dot(matrix, vector)\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "    \n",
+    "    # Original vector (blue)\n",
+    "    ax.quiver(0, 0, vector[0, 0], vector[1, 0], angles='xy', scale_units='xy', scale=1, color='b', label=\"Original Vector\")\n",
+    "    \n",
+    "    # Transformed vector (red)\n",
+    "    ax.quiver(0, 0, transformed_vector[0, 0], transformed_vector[1, 0], angles='xy', scale_units='xy', scale=1, color='r', label=\"Transformed Vector\")\n",
+    "    \n",
+    "    ax.set_xlim([-10, 10])\n",
+    "    ax.set_ylim([-10, 10])\n",
+    "    ax.axvline(x=0, color='grey', lw=1)\n",
+    "    ax.axhline(y=0, color='grey', lw=1)\n",
+    "    ax.grid(True, which='both')\n",
+    "    ax.legend()\n",
+    "    \n",
+    "    plt.show()\n",
+    "\n",
+    "widgets.interact(matrix_transform, \n",
+    "                 a=widgets.IntSlider(min=-5, max=5, value=1, description=\"a\"),\n",
+    "                 b=widgets.IntSlider(min=-5, max=5, value=0, description=\"b\"),\n",
+    "                 c=widgets.IntSlider(min=-5, max=5, value=0, description=\"c\"),\n",
+    "                 d=widgets.IntSlider(min=-5, max=5, value=1, description=\"d\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Commuting and non-commuting matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Redefine non-commuting matrices for more distinct transformations\n",
+    "C = np.array([[0, -1], [1, 0]])  # 90-degree rotation matrix\n",
+    "D = np.array([[1, 2], [0, 1]])  # Horizontal shear\n",
+    "\n",
+    "# Compute the products C*D and D*C (non-commuting case)\n",
+    "CD = C @ D\n",
+    "DC = D @ C\n",
+    "\n",
+    "# Apply the transformations\n",
+    "CD_vector = CD @ vector\n",
+    "DC_vector = DC @ vector\n",
+    "\n",
+    "# Create subplots for commuting and non-commuting cases\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(12, 12))\n",
+    "\n",
+    "# Plot 1: A * B (commuting matrices)\n",
+    "axs[0, 0].axhline(0, color='black',linewidth=0.5)\n",
+    "axs[0, 0].axvline(0, color='black',linewidth=0.5)\n",
+    "axs[0, 0].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
+    "axs[0, 0].quiver(0, 0, AB_vector[0], AB_vector[1], angles='xy', scale_units='xy', scale=1, color='red', label='A * B Vector')\n",
+    "axs[0, 0].set_xlim(-10, 10)\n",
+    "axs[0, 0].set_ylim(-10, 10)\n",
+    "axs[0, 0].set_title('Commuting: A * B')\n",
+    "axs[0, 0].legend()\n",
+    "axs[0, 0].grid(True)\n",
+    "axs[0, 0].set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "# Plot 2: B * A (commuting matrices)\n",
+    "axs[0, 1].axhline(0, color='black',linewidth=0.5)\n",
+    "axs[0, 1].axvline(0, color='black',linewidth=0.5)\n",
+    "axs[0, 1].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
+    "axs[0, 1].quiver(0, 0, BA_vector[0], BA_vector[1], angles='xy', scale_units='xy', scale=1, color='green', label='B * A Vector')\n",
+    "axs[0, 1].set_xlim(-10, 10)\n",
+    "axs[0, 1].set_ylim(-10, 10)\n",
+    "axs[0, 1].set_title('Commuting: B * A')\n",
+    "axs[0, 1].legend()\n",
+    "axs[0, 1].grid(True)\n",
+    "axs[0, 1].set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "# Plot 3: C * D (non-commuting matrices)\n",
+    "axs[1, 0].axhline(0, color='black',linewidth=0.5)\n",
+    "axs[1, 0].axvline(0, color='black',linewidth=0.5)\n",
+    "axs[1, 0].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
+    "axs[1, 0].quiver(0, 0, CD_vector[0], CD_vector[1], angles='xy', scale_units='xy', scale=1, color='purple', label='C * D Vector')\n",
+    "axs[1, 0].set_xlim(-10, 10)\n",
+    "axs[1, 0].set_ylim(-10, 10)\n",
+    "axs[1, 0].set_title('Non-Commuting: C * D')\n",
+    "axs[1, 0].legend()\n",
+    "axs[1, 0].grid(True)\n",
+    "axs[1, 0].set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "# Plot 4: D * C (non-commuting matrices)\n",
+    "axs[1, 1].axhline(0, color='black',linewidth=0.5)\n",
+    "axs[1, 1].axvline(0, color='black',linewidth=0.5)\n",
+    "axs[1, 1].quiver(0, 0, vector[0], vector[1], angles='xy', scale_units='xy', scale=1, color='blue', label='Original Vector')\n",
+    "axs[1, 1].quiver(0, 0, DC_vector[0], DC_vector[1], angles='xy', scale_units='xy', scale=1, color='orange', label='D * C Vector')\n",
+    "axs[1, 1].set_xlim(-10, 10)\n",
+    "axs[1, 1].set_ylim(-10, 10)\n",
+    "axs[1, 1].set_title('Non-Commuting: D * C')\n",
+    "axs[1, 1].legend()\n",
+    "axs[1, 1].grid(True)\n",
+    "axs[1, 1].set_aspect('equal', adjustable='box')\n",
+    "\n",
+    "# Display the plots\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -459,11 +588,6 @@
     "\n",
     "This is a basic introduction to the Hopfield network using matrix and vector operations. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
