'stretch rotate reflect'

--- a/math/note04.ipynb
+++ b/math/note04.ipynb
@@ -429,6 +429,17 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Define two commuting matrices (scaling matrices)\n",
+    "A = np.array([[2, 0], [0, 0.5]])\n",
+    "B = np.array([[3, 0], [0, 0.75]])\n",
+    "\n",
+    "# Compute the products A*B and B*A\n",
+    "AB = A @ B\n",
+    "BA = B @ A\n",
+    "\n",
     "# Redefine non-commuting matrices for more distinct transformations\n",
     "C = np.array([[0, -1], [1, 0]])  # 90-degree rotation matrix\n",
     "D = np.array([[1, 2], [0, 1]])  # Horizontal shear\n",
