--- a/math/note04.ipynb
+++ b/math/note04.ipynb
@@ -40,6 +40,10 @@
     "\n",
     "  $$e_1 = (1, 0, 0), \\,\\, e_2 = (0, 1, 0), \\,\\, e_3 = (0, 0, 1)$$\n",
     "\n",
+    "- Here is an example of vector $v$ in terms of unit vectors of euclidean space.\n",
+    "\n",
+    "  $$v = (2,3,4) = 2e_1+3e_2+4e_3$$\n",
+    "\n",
     "- In a different coordinate system or basis, the same vector will have different components, but its intrinsic properties remain unchanged. This flexibility in representation is a fundamental concept in quantum mechanics and linear algebra.\n",
     "\n",
     "\n",
@@ -57,9 +61,7 @@
     "\\mathbf{v} = 2 \\mathbf{e_1} + 3 \\mathbf{e_2}\n",
     "$$\n",
     "\n",
-    "Where:\n",
-    "- $ \\mathbf{e_1} = \\begin{pmatrix} 1 \\\\ 0 \\end{pmatrix}$ \n",
-    "- $\\mathbf{e_2} = \\begin{pmatrix} 0 \\\\ 1 \\end{pmatrix}$\n",
+    "- Where: $ \\mathbf{e_1} = \\begin{pmatrix} 1 \\\\ 0 \\end{pmatrix}$  and $\\mathbf{e_2} = \\begin{pmatrix} 0 \\\\ 1 \\end{pmatrix}$\n",
     "\n",
     "Now, suppose we switch to a new basis, where each new basis vector is a scalar multiple of the standard basis vectors. Let’s define the new basis vectors as:\n",
     "\n",
@@ -110,11 +112,6 @@
     "### Vector Operations\n",
     "\n",
     "What defines vectors in a mathematical framework are the operations performed on them. Let’s illustrate these operations using a simple 2D vector as an example:\n",
-    "\n",
-    "$$\\mid a \\rangle = a_1 \\mid e_1 \\rangle + a_2 \\mid e_2 \\rangle$$\n",
-    "\n",
-    "\n",
-    "$$\\mid b \\rangle = b_1 \\mid e_1 \\rangle + b_2 \\mid e_2 \\rangle$$\n",
     "\n",
     "#### 1. Addition or Subtraction\n",
     "\n",
@@ -174,14 +171,17 @@
     "\n",
     "This system can be written compactly in matrix form as:\n",
     "\n",
+    ":::{admonition} **A system of linear equation as matrix vector product**\n",
+    "\n",
     "$$\n",
     "A \\mathbf{x} = \\mathbf{b}\n",
     "$$\n",
     "\n",
-    "Where:\n",
     "- $A$ is a matrix containing the coefficients of the system,\n",
     "- $\\mathbf{x}$ is the vector of unknowns, and\n",
     "- $\\mathbf{b}$ is the vector of constants (right-hand side).\n",
+    "\n",
+    ":::\n",
     "\n",
     "For a 2D system, this becomes:\n",
     "\n",
@@ -218,7 +218,7 @@
     "This shows how the system of equations is equivalent to multiplying the matrix by the vector.\n",
     "\n",
     "\n",
-    "### Lower level definition of Matrix Multiplication\n",
+    "**Lower level definition of Matrix Multiplication**\n",
     "\n",
     "In general, if $A$ is an $m \\times n$ matrix and $\\mathbf{x}$ is a vector of dimension $n$, the matrix-vector multiplication $A \\mathbf{x}$ is defined as:\n",
     "\n",
@@ -227,6 +227,18 @@
     "$$\n",
     "\n",
     "Where $a_{ij}$ are the elements of matrix $A$, and $x_j$ are the components of vector $\\mathbf{x}$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{admonition} **Solving linear equation via matrix Inversion**\n",
+    ":class: important\n",
+    "\n",
+    "$${\\bf x} = A^{-1}{\\bf b}$$\n",
+    "\n",
+    ":::"
    ]
   },
   {
